<resources>
    <string name="maps_api">AIzaSyBp2iCJOmchco1BW7zIgIZ9Rc1nwv-dl_4</string>
    <string name="distance_value">km</string>
    <string name="gas_measure_liter">L</string>

    <string name="app_name">Car Rent</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_registered">I have an account</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="passwords_no_match">Passwords didn`t match</string>
    <string name="permissions_error">Can`t get your location</string>
    <string name="logout_press_again">Click again to confirm logout.</string>
    <string name="maps_error">Error: can`t make map requests.</string>
    <string name="address_error">Can`t get addresses. Restart your device</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="snackbar_action_close">OK</string>
    <string name="filter_dialog_title">Filter cars</string>
    <string name="verification_sent">A verification link has been sent to</string>
    <string name="verification_error">We can`t send you email verification link to</string>
    <string name="not_verified">Check your email to verify your account</string>
    <string name="error_not_logged">You are not logged in!</string>
    <string name="error_user_not_found">User not found!</string>

    <!--EditText Hints-->
    <string name="hint_username">Enter username</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_phone_number">Enter phone number</string>
    <string name="searchview_hint">Model, plate number, city or street</string>
    <string name="hint_enter_current_pass">Enter current password</string>
    <string name="hint_enter_new_pass">Enter new password</string>
    <string name="hint_repeat_new_pass">Repeat new password</string>

    <!-- Navigation drawer, other menus -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_welcome">Welcome,</string>
    <string name="nav_header_balance">69 €</string>
    <string name="balance">Balance: </string>
    <string name="nav_header_currency_euro">€</string>
    <string name="nav_header_guest">Guest</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Profile Fragment -->
    <string name="profile">profile</string>
    <string name="message_logged_out">You have been logged out</string>

    <!-- Profile preferences -->
    <string name="KEY_MY_CAR">MY_CAR</string>
    <string name="my_car_title">My car</string>
    <string name="my_car_summary">View your car in details</string>

    <string name="KEY_ADD_FUNDS">ADD_FUNDS</string>
    <string name="add_funds_title">Add funds</string>
    <string name="add_funds_summary">Add funds into your balance</string>

    <string name="KEY_EDIT_PROFILE">EDIT_PROFILE</string>
    <string name="edit_profile_title">Edit your profile</string>
    <string name="edit_profile_summary">Change username, phone number</string>

    <string name="KEY_LOGOUT">LOGOUT</string>
    <string name="logout_title">Logout</string>
    <string name="logout_summary">Logout from your current account</string>

    <string name="rented_until">Rented until:</string>

    <!-- EditProfile -->
    <string name="confirm">Confirm</string>
    <string name="PROFILE_UPDATED">Updated!</string>
    <string name="PASSWORD_UPDATE_ERROR">An error occurred while updating password!</string>
    <string name="ERROR_WRONG_PASS">You may entered wrong password!</string>

    <!-- Toolbar -->
    <string name="show_all">Show all</string>
    <string name="sort_nearest">Sort by nearest</string>

    <!-- Car Fragment -->
    <string name="CAR_RENT_ERROR_RENTED_OR_HAS_CAR">This car is rented or you already have a car!</string>
    <string name="CAR_RENT_ERROR_MONEY">You don`t have enough money! Go to profile.</string>
    <string name="CAR_RENT_ERROR_REQUIREMENTS_NOT_MET">Minimum time of rent is 1 hour!</string>
    <string name="CAR_RENT_TWICE_CLICK">Click again to confirm rent</string>

    <string name="ERROR_AUTH_REQUIRED">Authentication is needed for this action!</string>
    <string name="ERROR_NO_CAR">This car no longer exists!</string>

    <string name="car_rent_period">Select rent time</string>
    <string name="car_rent_date">Selected to rent until:</string>
    <string name="car_rent_total_cost">Total cost:</string>
    <!-- Car details cardviews -->
    <string name="car_info">Car Info</string>
    <string name="car_model_title">Title:</string>
    <string name="car_plate_number">Plate number:</string>
    <string name="car_model_engine">Engine:</string>
    <string name="car_gas_type">Gas type:</string>
    <string name="car_release_date">Released:</string>

    <string name="car_fuel_consumption">Fuel Consumption</string>
    <string name="car_full_tank_capacity">Tank capacity:</string>
    <string name="car_consumption">Consumption</string>
    <string name="car_consumption_urban">Urban:</string>
    <string name="car_tank_left">Tank left:</string>
    <string name="car_consumption_combined">Combined:</string>
    <string name="car_consumption_highway">Highway:</string>

    <string name="car_location">Location</string>
    <string name="car_located">This car is located:</string>

    <string name="btn_rent">Rent</string>


    <!--CarManagementFragment-->
    <string name="extend">Extend</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="is_locked">is locked now</string>
    <string name="is_unlocked">is unlocked now</string>
    <string name="more_details">More details</string>
    <string name="rent_expired">Your rent has expired</string>

    <string name="car_extend_period">Select extend time</string>
    <string name="car_extend_date">Selected to extend until:</string>
    <string name="time_extended">Time extended</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
