<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.LoginActivity"
            android:fillViewport="true"
            android:paddingTop="12dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scrollbarStyle="outsideOverlay">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_directions_car_primary_100dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:focusable="false"
                android:focusableInTouchMode="true">

            <TextView
                    style="@style/TextPrimaryBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_here"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"/>

            <EditText
                    android:id="@+id/et_username"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName"/>

            <EditText
                    android:id="@+id/et_email"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                <EditText
                        android:id="@+id/et_password"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"/>

                <EditText
                        android:id="@+id/et_password_confirm"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword"/>
            </LinearLayout>

            <EditText
                    android:id="@+id/et_phone"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"/>

            <Button
                    android:id="@+id/btn_register"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"/>

            <TextView
                    android:id="@+id/tv_register_here"
                    style="@style/TextSecondaryItalic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/already_registered"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>