<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="15dp"
        android:scrollbarStyle="outsideOverlay">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="50dp"
            android:paddingRight="20dp"
            android:paddingBottom="50dp">

        <ImageView
                android:id="@+id/iv_logo"
                style="@style/iv_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_lightgray_24dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <EditText
                android:id="@+id/et_password"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_lightgray_24dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Button
                android:id="@+id/btn_login"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
                android:id="@+id/tv_continue_as_guest"
                style="@style/TextSecondOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/continue_as_guest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
                android:id="@+id/tv_goto_register"
                style="@style/TextSecondOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_continue_as_guest" />

        <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/TextSecondOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_goto_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>