<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/ic_directions_car_white_100dp"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"/>

    <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_welcome"
            style="@style/TextSecondaryItalic"
            android:textColor="#FFFF"
            android:textSize="15dp"/>

    <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_balance"
            style="@style/TextSecondaryItalic"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"/>

</LinearLayout>
