<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="15dp"
        android:scrollbarStyle="outsideOverlay"
        tools:context=".fragments.profile.edit.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="20dp"
            android:paddingTop="50dp"
            android:paddingRight="20dp"
            android:paddingBottom="50dp">

        <ImageView
                android:id="@+id/iv_logo"
                style="@style/iv_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/et_username"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_lightgray_24dp"
                android:hint="@string/hint_username"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <EditText
                android:id="@+id/et_phone"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone_lightgray_24dp"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_lightgray_24dp"
                android:editable="false"
                android:hint="@string/hint_email"
                android:inputType="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <EditText
                android:id="@+id/et_current_password"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_lightgray_24dp"
                android:hint="@string/hint_enter_current_pass"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
                android:id="@+id/et_new_password"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:drawableLeft="@drawable/ic_lock_lightgray_24dp"
                android:hint="@string/hint_enter_new_pass"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_current_password" />

        <EditText
                android:id="@+id/et_repeat_new_password"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_lightgray_24dp"
                android:hint="@string/hint_repeat_new_pass"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_new_password" />

        <Button
                android:id="@+id/btn_confirm"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_repeat_new_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>